--- a/transparencia.html
+++ b/transparencia.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Portal da Transparência do Hospital Nossa Senhora de Fátima.">
     <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="icon" href="assets/img/favicon.png">
+    <link rel="icon" href="assets/img/favicon.ico">
 </head>
 <body class="page page-transparency">
 <header class="site-header">
