--- a/contato.html
+++ b/contato.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Contato e localização do Hospital Nossa Senhora de Fátima.">
     <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="icon" href="assets/img/favicon.png">
+    <link rel="icon" href="assets/img/favicon.ico">
 </head>
 <body class="page page-contact">
 <header class="site-header">
