--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Hospital Nossa Senhora de Fátima - atendimento humanizado e referência em saúde.">
     <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="icon" href="assets/img/favicon.png">
+    <link rel="icon" href="assets/img/favicon.ico">
 </head>
 <body class="page page-home">
 <header class="site-header">
