--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 </p>
                 <div class="hero-actions">
                     <a href="transparencia.html" class="btn btn-primary">Portal da Transparência</a>
-                    <a href="contato.php" class="btn btn-outline">Fale conosco</a>
+                    <a href="contato.html" class="btn btn-outline">Fale conosco</a>
                 </div>
             </div>
             <div class="hero-highlight">
