--- a/transparencia.html
+++ b/transparencia.html
@@ -58,7 +58,7 @@
                     Para informações adicionais, dúvidas ou solicitações específicas, utilize o formulário na página
                     de contato ou os canais oficiais da instituição.
                 </p>
-                <a href="contato.php" class="card-link">Ir para contato</a>
+                <a href="contato.html" class="card-link">Ir para contato</a>
             </div>
         </div>
     </section>
