imagem de fundo

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="icon" href="assets/img/favicon.ico">
 </head>
-<body class="page page-home">
+<body class="page page-home home">
 <header class="site-header">
     <div class="container header-content">
         <a href="index.html" class="logo">
